--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "browserify": "^12.0.1",
     "bump-version": "^0.5.0",
     "expect.js": "^0.3.1",
+    "flat": "^2.0.1",
     "grunt": "^0.4.5",
     "grunt-babel": "^6.0.0",
     "grunt-browserify": "4.0.1",
